# PdM_NoveltyDetectionFramework

./: .gitignore  Configuration.json  README.md  conf.json  git-init.sh  ndftoken
AIU/: Dataset.txt  Dataset_Low_Lubrication_3.txt  MAS_Simulated.py  Wavelet.py  main.py  plot.py
AIU/AIU/: AI_Unit.py  Predictor.py
AIU/Low_Retrain/: Predictor_100_Model.sav  Predictor_101_Model.sav  Predictor_102_Model.sav  Predictor_103_Model.sav  Predictor_104_Model.sav  Predictor_105_Model.sav  Predictor_106_Model.sav  Predictor_107_Model.sav  Predictor_108_Model.sav  Predictor_109_Model.sav  Predictor_10_Model.sav  Predictor_110_Model.sav  Predictor_111_Model.sav  Predictor_112_Model.sav  Predictor_113_Model.sav  Predictor_114_Model.sav  Predictor_115_Model.sav  Predictor_116_Model.sav  Predictor_117_Model.sav  Predictor_118_Model.sav  Predictor_119_Model.sav  Predictor_11_Model.sav  Predictor_12_Model.sav  Predictor_13_Model.sav  Predictor_14_Model.sav  Predictor_15_Model.sav  Predictor_16_Model.sav  Predictor_17_Model.sav  (+91 more)
AgentSystem/: AgentSystem170222.rar
AgentSystem/AgentSystem231221/: CMakeLists.txt
AgentSystem/AgentSystem231221/include/: IMongoDriverAgentInterface.h  INotifyDriverAgentInterface.h  TcAgentSystem.h  TcEvent.h  TcMeasure.h  TcMongoDriver.h  TcNotification.h
AgentSystem/AgentSystem231221/include/Agent/: IAgent.h  TcAgent.h  TcAgentStatus.h  TcOneShotAgent.h  TcThresholdsAgent.h  TcThresholdsComputeAgent.h
AgentSystem/AgentSystem231221/include/Agent/MeasureInjectorAgent/: TcMeasureInjectorAgent.h
AgentSystem/AgentSystem231221/include/Agent/MeasurementsDeviationDetectorAgent/: TcMathSupporter.h  TcMeasurementsDeviationDetectorAgent.h  TcRegressor.h  TcStatisticTestMeasures.h
AgentSystem/AgentSystem231221/source/: IMongoDriverAgentInterface.cpp  INotifyDriverAgentInterface.cpp  TcAgentSystem.cpp  TcEvent.cpp  TcMeasure.cpp  TcMongoDriver.cpp  TcNotification.cpp
AgentSystem/AgentSystem231221/source/Agent/: IAgent.cpp  TcAgent.cpp  TcAgentStatus.cpp  TcOneShotAgent.cpp
AgentSystem/AgentSystem231221/source/Agent/MeasureInjectorAgent/: Simulation.sim  TcMeasureInjectorAgent.cpp
AgentSystem/AgentSystem231221/source/Agent/MeasurementsDeviationDetectorAgent/: TcMathSupporter.cpp  TcMeasurementsDeviationDetectorAgent.cpp  TcStatisticTestMeasures.cpp
AgentSystem/AgentSystem231221/source/Agent/ThresholdMeasureComparerAgent/: TcThresholdsAgent.cpp  TcThresholdsComputeAgent.cpp
AgentSystem/AgentSystem270722/: CMakeLists.txt
AgentSystem/AgentSystem270722/include/: IMongoDriverAgentInterface.h  INotifyDriverAgentInterface.h  TcAgentManager.h  TcAgentSystem.h  TcEvent.h  TcMathSupporter.h  TcMeasure.h  TcMongoDriver.h  TcNotification.h  TcRegressor.h  TcStatisticTestMeasures.h
AgentSystem/AgentSystem270722/include/Agent/: IAgent.h  TcAgent.h  TcAgentStatus.h  TcOneShotAgent.h
AgentSystem/AgentSystem270722/include/Agent/MeasureInjectorAgent/: TcMeasureInjectorAgent.h
AgentSystem/AgentSystem270722/include/Agent/MeasurementsDeviationDetectorAgent/: TcMeasurementsDeviationDetectorAgent.h
AgentSystem/AgentSystem270722/include/Agent/ThresholdsAgent/: TcThresholdsAgent.h  TcThresholdsComputeAgent.h
AgentSystem/AgentSystem270722/source/: IMongoDriverAgentInterface.cpp  INotifyDriverAgentInterface.cpp  TcAgentManager.cpp  TcAgentSystem.cpp  TcEvent.cpp  TcMathSupporter.cpp  TcMeasure.cpp  TcMongoDriver.cpp  TcNotification.cpp  TcStatisticTestMeasures.cpp
AgentSystem/AgentSystem270722/source/Agent/: IAgent.cpp  TcAgent.cpp  TcOneShotAgent.cpp
AgentSystem/AgentSystem270722/source/Agent/MeasureInjectorAgent/: TcMeasureInjectorAgent.cpp
AgentSystem/AgentSystem270722/source/Agent/MeasurementsDeviationDetectorAgent/: TcMeasurementsDeviationDetectorAgent.cpp
AgentSystem/AgentSystem270722/source/Agent/ThresholdsAgent/: TcThresholdsAgent.cpp  TcThresholdsComputeAgent.cpp
AgentSystem/MultiAgentSystem/: CMakeLists.txt  start-mongodb.sh
AgentSystem/MultiAgentSystem/Datasets/: Data_Analysis.ipynb
AgentSystem/MultiAgentSystem/include/: IMongoDriverAgentInterface.h  INotifyDriverAgentInterface.h  TcAgentManager.h  TcAgentSystem.h  TcLinearRegressor.h  TcMathSupporter.h  TcMeasure.h  TcMongoDriver.h  TcNotification.h  TcRegressor.h
AgentSystem/MultiAgentSystem/include/Agent/: IAgent.h  TcAgent.h  TcOneShotAgent.h
AgentSystem/MultiAgentSystem/include/Agent/ErrorDegradationTimeEstimatorAgent/: TcErrorDegradationTimeEstimator.h
AgentSystem/MultiAgentSystem/include/Agent/ThresholdsAgent/: TcThresholdsAgent.h
AgentSystem/MultiAgentSystem/source/: IMongoDriverAgentInterface.cpp  INotifyDriverAgentInterface.cpp  TcAgentManager.cpp  TcAgentSystem.cpp  TcMathSupporter.cpp  TcMongoDriver.cpp  TcNotification.cpp
AgentSystem/MultiAgentSystem/source/Agent/: IAgent.cpp  TcAgent.cpp  TcOneShotAgent.cpp
AgentSystem/MultiAgentSystem/source/Agent/ErrorDegradationTimeEstimatorAgent/: TcErrorDegradationTimeEstimator.cpp
AgentSystem/MultiAgentSystem/source/Agent/ThresholdsAgent/: TcThresholdsAgent.cpp
MultiAgentSystem/: CMakeLists.txt  MAS_Test.py  mongodb-start.sh  plot.py
MultiAgentSystem/include/: IMongoDriverAgentInterface.h  INotifyDriverAgentInterface.h  TcAgentManager.h  TcAgentSystem.h  TcColors.h  TcEvent.h  TcLinearRegressor.h  TcMathSupporter.h  TcMeasure.h  TcMongoDriver.h  TcNotification.h
MultiAgentSystem/include/Agent/: IAgent.h  TcAgent.h  TcAgentStatus.h  TcOneShotAgent.h
MultiAgentSystem/include/Agent/ErrorDegradationTimeEstimatorAgent/: TcErrorDegradationTimeEstimator.h
MultiAgentSystem/include/Agent/ThresholdsAgent/: TcThresholdsAgent.h
MultiAgentSystem/source/: IMongoDriverAgentInterface.cpp  INotifyDriverAgentInterface.cpp  TcAgentManager.cpp  TcAgentSystem.cpp  TcEvent.cpp  TcLinearRegressor.cpp  TcMathSupporter  TcMathSupporter.cpp  TcMeasure.cpp  TcMongoDriver.cpp
MultiAgentSystem/source/Agent/: IAgent.cpp  TcAgent.cpp  TcAgentStatus.cpp  TcOneShotAgent.cpp
MultiAgentSystem/source/Agent/ErrorDegradationTimeEstimatorAgent/: TcErrorDegradationTimeEstimator.cpp
MultiAgentSystem/source/Agent/ThresholdsAgent/: TcThresholdsAgent.cpp
(+157 files in other folders)
